# qm-dish

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: public-docs-to-gh-pages.yml
docs/: .buildinfo  api.html  examples.html  genindex.html  index.html  introduction.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  setup.html
docs/_sources/: api.rst.txt  examples.rst.txt  index.rst.txt  quickstart.rst.txt
docsrc/: Makefile  requirements.txt
docsrc/source/: api.rst  conf.py  examples.rst  index.rst  introduction.rst  quickstart.rst  setup.rst
src/dirac/: indir.py  master.py  outdir.py  solver.py
src/dirac/coulomb/: analytical.py
src/dish/: __init__.py
src/dish/dirac/: indir.py  master.py  outdir.py  solver.py
src/dish/dirac/coulomb/: analytical.py
src/dish/schrodinger/: master.py  master2.py  outsch.py  solver.py
src/dish/schrodinger/coulomb/: analytical.py
src/dish/schrödinger/: insch.py
src/dish/util/: atom.py  atomic_units.py  misc.py  wave_function.py
src/dish/util/LUTs/: __init__.py  adams_moulton.LUT  adams_moulton.py  (+3 more)
src/schrodinger/: insch.py  master.py  master2.py  outsch.py
src/schrodinger/coulomb/: analytical.py
src/util/: atom.py  atomic_units.py  misc.py  wave_function.py
src/util/LUTs/: __init__.py  adams_moulton.LUT  adams_moulton.py  outsch.LUT  outsch.py
src/util/math/: __init__.py  linear_algebra.py  special_functions.py  taylor.py
src/util/numeric/: adams.py  adams_f.f90  insch.py  outsch.py
src/util/potential/: __init__.py  fermi.py
(+17 files in other folders)
